# My-note

./: .gitignore  LICENSE  README.md  TODO.md  delivery_log.md  design_V2.md  design_archive_v1.md  package.json  plan_P3.md  plan_agent_chat.md  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsc-check.json  vite.config.ts
.github/workflows/: ci.yml
First design/: app-core.jsx  windows-frame.jsx
Second-design/: README.md
Second-design/project/: Quire.html  app-core.jsx
Second-design/project/scraps/: sketch-2026-04-19T12-03-47-wvjs23.napkin
sample-vault/.mynotes/: config.json
sample-vault/.mynotes/ai/: embeddings.sqlite
sample-vault/.mynotes/ai/chats/: chat-20260421T202059-5ac0785b.jsonl
sample-vault/0-inbox/: 2026-04-22-042441.md  idea-sidebar-microcopy.md  voice-note-follow-up.md
sample-vault/1-notes/: agent-chat-workflow.md  customer-feedback-patterns.md  meeting-notes-to-brief.md  release-rhythm.md  sidebar-information-architecture.md  start-here.md  task-triage-rules.md
sample-vault/2-moc/: product-ops-moc.md  sample-vault-home.md
sample-vault/3-journal/: 2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-W16.md  2026-W17.md  2026-W18.md
sample-vault/4-projects/agent-playbooks/: index.md  prompt-benchmarks.md
sample-vault/4-projects/legacy-import/: index.md
sample-vault/4-projects/mobile-capture/: index.md  shipping-notes.md
sample-vault/4-projects/spring-launch/: customer-voice.md  index.md  release-brief.md
sample-vault/templates/: daily.md  moc.md  note.md  project-note.md  project.md  weekly.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  attachment.rs  config.rs  export.rs  file.rs  graph.rs  import.rs  index.rs  mod.rs  project.rs  rename.rs  vault.rs
src-tauri/src/db/: indexer.rs  mod.rs  schema.sql
src-tauri/src/services/: config.rs  mod.rs  scanner.rs  watcher.rs
src-tauri/src/services/ai/: chat_store.rs  chunker.rs  embed_service.rs  embedding_store.rs  init_service.rs  mod.rs  openai.rs  provider.rs  rag.rs  runtime.rs  secrets.rs  system_prompt.rs  tool_registry.rs  usage_log.rs
src-tauri/src/services/ai/tools/: common.rs  delete_note.rs  get_related_notes.rs  list_tags.rs  mod.rs  propose_moc.rs  propose_note_edit.rs  propose_summary.rs  propose_tag_update.rs  read_note.rs  rename_note.rs  search_by_tag.rs  search_fulltext.rs  writeback_support.rs
src-tauri/templates/: daily.md  inbox.md  moc.md  note.md  project-note.md  project.md  weekly.md
src/lib/: commands.ts  shortcuts.ts  template.ts
src/lib/ai/: DiffPreviewModal.svelte  TagSuggestModal.svelte  diffLines.ts  draftMocPrompt.ts  suggestTagsPrompt.ts  summarizePrompt.ts
src/lib/chat/: ProposalCard.svelte  ToolCallCard.svelte  acceptProposal.ts  proposalResolutionStore.ts  toolCallViewModel.ts  toolLabels.ts
src/lib/e2e/: mockBootstrap.ts  mockChatScripts.ts
src/lib/editor/: Editor.svelte  imageEmbed.ts  livepreview.ts  markdownTheme.ts  wikicomplete.ts
src/lib/graph/: GraphView.svelte  canvasRenderer.ts  forceLayout.ts
src/lib/inbox/: InboxView.svelte
src/lib/ipc/: ai.ts  attachment.ts  config.ts  export.ts  file.ts  graph.ts  index.ts  project.ts  vault.ts
src/lib/palette/: CommandPalette.svelte  commandRegistry.ts
src/lib/panel/: ChatPanel.svelte  Panel.svelte
src/lib/projects/: ProjectsSection.svelte
src/lib/sidebar/: IconRail.svelte  KnowledgeColumn.svelte
src/lib/state/: vault.svelte.ts
src/lib/tags/: TagView.svelte  TagsSection.svelte
src/lib/tasks/: TasksList.svelte  TodayTasksPanel.svelte
src/lib/tweaks/: TweaksPanel.svelte  tweaksStore.svelte.ts
src/routes/: +layout.ts  +page.svelte
src/routes/chat-standalone/: +page.svelte
tests/e2e/: README.md  agent-chat.spec.ts
