[package]
name = "my-notes"
version = "0.1.0"
description = "MyNotes — LYT-based personal knowledge base"
authors = ["yanghc"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "my_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
tempfile = "3"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
notify-debouncer-full = "0.3"
serde_yaml = "0.9"
sha2 = "0.10"
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
